# template-ds-pipeline

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
notebooks/: template.ipynb
scripts/: train_model.py
tests/: conftest.py
