[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Brad Thorne <brad@wbt.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
ipython = "^7.9.0"
template = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =[
    "--cov template --cov-report term-missing",
    "--verbose"
    ]
norecursedirs = [
    "dist",
    "build",
    ".tox"
    ]
testpaths = "tests"

[tool.isort]
line_length=88
indent='    '
skip=[".tox",".venv","build","dist"]
known_standard_library=["setuptools","pkg_resources"]
known_test="pytest"
known_first_party="template"
sections=["FUTURE","STDLIB","COMPAT","TEST","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
default_section="THIRDPARTY"
multi_line_output=3

[flake8]
# Some sane defaults for the code style checker flake8
exclude =[
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
